--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@tanstack/match-sorter-utils": "^8.19.4",
+    "@tanstack/react-query": "^5.65.0",
+    "@tanstack/react-query-devtools": "^5.65.0",
     "@tanstack/react-table": "^8.20.6",
     "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "cookies-next": "^5.0.2",
+    "jwt-decode": "^4.0.0",
+    "moment-timezone": "^0.5.47",
     "next": "15.1.4",
+    "next-auth": "^5.0.0-beta.19",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
